fix readability code fixx center css colors rm useless

--- a/src/components/Error/error.css
+++ b/src/components/Error/error.css
@@ -1,16 +1,14 @@
-.error {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  
+.error-page {
+
     h1 {
+
       font-size: 96px;
       font-weight: 700;
       margin: 75px 0;
     }
   
     h2 {
-      font-size: 18px;
+      font-size: 19px;
       text-align: center;
       margin-bottom: 100px;
       color: #FF6060;
